# clock

./: .clock.conf  .gitignore  CMakeLists.txt  README.md  build.json  clock.desktop  configure  makefile
.github/workflows/: cmake.yml
help/: CMakeLists.txt  header.html  help.html
icon/: CMakeLists.txt
res/: CMakeLists.txt
src/: CMakeLists.txt  chime.cpp  chime.h  clock.cpp  clock.h  main.cpp  wall_clock.cpp  wall_clock.h
