cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
enable_testing()

# Project Settings
project("clock" VERSION 1.1.0)
set(CMAKE_PROJECT_DESCRIPTION "Digital Clock with Chimes and Alarms")
set(CMAKE_PROJECT_HOMEPAGE_URL "https://www.shaidin.com/clock")

# Packaging
set(CPACK_PACKAGE_VENDOR "virtualmatador")
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.txt")
set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_BINARY_DIR}/icon/app.ico")
if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR}")
    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl2-2.0-0 (>= 2.0.0), libsdl2-ttf-2.0-0 (>= 2.0.0)")
elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(CPACK_GENERATOR "XCODE")
elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(CPACK_GENERATOR "WIX")
    set(CPACK_WIX_UPGRADE_GUID "5A33D85D-5591-48ED-AD10-E7DB2B8552A7")
    set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_VENDOR}\\\\${CMAKE_PROJECT_NAME}")
    install(FILES "${CMAKE_FIND_ROOT_PATH}/sys-root/mingw/bin/SDL2.dll" DESTINATION "bin")
    install(FILES "${CMAKE_FIND_ROOT_PATH}/sys-root/mingw/bin/SDL2_ttf.dll" DESTINATION "bin")
    install(FILES "${CMAKE_FIND_ROOT_PATH}/sys-root/mingw/bin/libfreetype-6.dll" DESTINATION "bin")
    install(FILES "${CMAKE_FIND_ROOT_PATH}/sys-root/mingw/bin/iconv.dll" DESTINATION "bin")
    install(FILES "${CMAKE_FIND_ROOT_PATH}/sys-root/mingw/bin/zlib1.dll" DESTINATION "bin")
endif()
include(CPack)

if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
        install(FILES "clock.desktop" DESTINATION "share/applications")
endif()

# Sub Directories
add_subdirectory("res")
add_subdirectory("icon")
add_subdirectory("src")
add_subdirectory("help")
